--- a/src/logging_conf.yaml
+++ b/src/logging_conf.yaml
@@ -7,23 +7,25 @@ handlers:
   console:
     class: rich.logging.RichHandler
     formatter: default
+    level: INFO
   file:
     class: logging.FileHandler
     filename: application.log
     formatter: default
+    level: DEBUG
 root:
   handlers: [console, file]
-  level: INFO
+  level: DEBUG
 loggers:
   uvicorn:
     handlers: [console, file]
-    level: INFO
+    level: DEBUG
     propagate: false
   uvicorn.error:
     handlers: [console, file]
-    level: ERROR
+    level: DEBUG
     propagate: true
   uvicorn.access:
     handlers: [console, file]
-    level: INFO
+    level: DEBUG
     propagate: true
